[package]
name = "key_vaulter"
version = "0.1.0"
edition = "2021"
description = "A Rust library for secure key management and structured data serialization using system keyrings."
license = "MIT"
repository = "https://github.com/afmiguel/key_vaulter"
readme = "README.md"
authors = ["Afonso Miguel <afonso.miguel@gmail.com>"]
homepage = "https://github.com/yourusername/key_vaulter"
documentation = "https://docs.rs/key_vaulter"
keywords = ["keyring", "key management", "secret storage", "secure storage", "key vault"]
categories = ["command-line-utilities", "data-structures", "security"]


[dependencies]
keyring = { version = "3.6.1", features = ["apple-native", "windows-native", "sync-secret-service"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"

[features]
use_env_credentials = []
